// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be rendered correctly 1`] = `
<label
  className="container root size-18 theme-light color-sky"
>
  <span
    className="uui-checkbox uui-checked"
  >
    <input
      aria-checked={true}
      aria-hidden={true}
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#checkbox-checked.svg"
        />
      </svg>
    </div>
  </span>
</label>
`;

exports[`Checkbox should be rendered correctly with new props 1`] = `
<label
  className="container root size-12 theme-dark color-sun"
>
  <span
    className="uui-checkbox uui-checked"
  >
    <input
      aria-checked={true}
      aria-hidden={true}
      checked={true}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#checkbox-checked.svg"
        />
      </svg>
    </div>
  </span>
</label>
`;
